			   XPCE ChangeLog
			   ==============

* FIXED: Bug#48: Error handling in date->advance.  Dmitry.

* FIXED: Bug#57: menu<-modified.  Holger Kanwischer.

* FIXED: Bug#52: file->backup when using national characters.  Jiri Spitz.


VERSION 6.5.19, distributed with SWI-Prolog 5.5.19
==================================================

* ADDED: Working on XIM support.  Current primitive version deals with
  dead-keys and with wide characters in a portable manner.


VERSION 6.5.18, distributed with SWI-Prolog 5.5.18
==================================================

* FIXED:  (At  least  partly):  use   UTF-8  in  decoding  output  from
  XLookupString() to deal with international keyboard input.  See
  src/x11/xcommon.c for details.

* FIXED: Bug#46: Support unicode in display->{inform,confirm}.  Dmitry.


VERSION 6.5.17, distributed with SWI-Prolog 5.5.17
==================================================

* FIXED: Bug#41: memory allocation error using Prolog terms in XPCE.
  Dmitry.

* FIXED: Bug#40: Wrong calculation of character dimensions on non-fixed
  width Unicode characters.  Dmitry.

* FIXED: Bug#39: cannot paint selected text with UNICODE characters.
  Dmitry.

* FIXED: tracing dynamic clauses holding strings.  Steve Moyle.

* FIXED: PceEmacs colouring: removed load_files/1 spec (error).  Cross
  referencer: deal properly with meta predicates with unknown goal.


VERSION 6.5.16, distributed with SWI-Prolog 5.5.16
==================================================

* FIXED: Bug#36: text->insert_self for characters > 255.  Dmitry.

* FIXED: Bug#33: editor->typed.  By default bind unicode characters to
  ->insert_self.  Dmitry.

* FIXED: char_array<-append: support wide characters.


VERSION 6.5.15, distributed with SWI-Prolog 5.5.15
==================================================

* PORT: Fixed visibility attribute issues on IA64.  These problems may
  have affected more GCC/ELF platforms.  With help from Stefan Dirsch.
